public/style.css
body {
    font-family: sans-serif;
    font-size: 85%;
}

[class$="Btn"] {
    display: none;
}

button {
    background: white;
}

.button, button {
    padding: 10px 20px;
    border: solid 1px black;
    display: inline-block;
    margin-right: 1em;
    font-size: 100%;
    cursor: pointer;
}

[class$="Btn"] + label:hover, button:hover {
    background: lightgrey;
}

[class$="Btn"]:checked + label, button:active  {
    background: black;
    color: white;
}

fieldset [data-type="dir"] + label {
    margin-right: 0;
    border-right: none;
}

#environmentsFormInner label {
    width: auto;
    margin-right: 2em;
}

.row {
    display: flex;
    margin-bottom: 1em;
}

.tagListWrapper {
    display: block;
}

.tagList {
    padding-left: 0;
}

.tag {
    display: inline-block;
    margin-right: 1em;
    padding: 0.5em;
    border: solid 1px black;
    cursor: pointer;
}

.featureList {
    padding-left: 1.5em;
}

.fullCol {
    padding: 0.5em;
}

.halfCol {
    width: calc(50% - 0.5em);
    border: solid 1px black;
    padding: 0.5em;
}

.halfCol:first-child {
    margin-right: 0.5em;
}

.halfCol:last-child {
    margin-left: 0.5em;
}

.row h2 {
    margin: 0;
}

.halfCol ul li {
    word-break: break-all;
}

.section {
    position: relative;
    margin-bottom: 1em;
}

.closeSection {
    position: absolute;
    top: 0;
    right: 0;
    margin-right: 0;
}

.tagsDropArea {
    background: lightgrey;
    border: solid 1px black;
}

.closeBtn:not(:checked) + label .openTxt {
    display: none;    
}

.closeBtn:checked + label .closeTxt {
    display: none;    
}

.closeBtn:checked + label ~ div {
    display: none;    
}

label[for="selectAll"] {
    margin-bottom: 1em;
}

.folderWrapper {
    margin: 0 0 1em 0;
    border: solid 1px black;
}

.featureFiles {
    margin-top: 1em;
}

.line {
    width: 2em;
}

.line + label {
    display: inline-block;
    width: calc(100% - 2.2em);
}

[data-type="dir"]:checked ~ div [data-type="file"] + label {
    color: green;
}

[data-type="file"]:checked + label {
    color: green;
}

.testRunningMsg {
    text-align: center;
    color: green;
    font-size: 45px;
    font-weight: bold;
    font-family: impact;
}

